--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+    <script src="js/controller/controllers.js"></script>
+    <script src="js/services/services.js"></script>
   </head>
   <body ng-app="starter">
     <!--
