shift to node-express server for restcalls created a server.js for rest-calls refactor service for API-Calls added Promises for API-Calls in controllers

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/controller/BooksBorrowedCtrl.js"></script>
     <script src="js/controller/BooksOnShelfCtrl.js"></script>
     <script src="js/controller/BooksSoldCtrl.js"></script>
+    <script src="js/controller/cameraCtrl.js"></script>
     <script src="js/controller/SettingsCtrl.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/router/router.js"></script>
