--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/controller/BooksSoldCtrl.js"></script>
     <script src="js/controller/cameraCtrl.js"></script>
     <script src="js/controller/SettingsCtrl.js"></script>
+    <script src="js/controller/newBookCtrl.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/router/router.js"></script>
 
