refactor several filenames and structure

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
 
     <!-- ngCordova -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+
+    <!-- angular-filter resource -->
     <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -23,20 +25,17 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controller/_controllers.js"></script>
     <script src="js/controller/BookListCtrl.js"></script>
     <script src="js/controller/BookDetailCtrl.js"></script>
     <script src="js/controller/BooksBorrowedCtrl.js"></script>
     <script src="js/controller/BooksOnShelfCtrl.js"></script>
-    <script src="js/controller/BooksSoldCtrl.js"></script>
-    <script src="js/controller/cameraCtrl.js"></script>
-    <script src="js/controller/SettingsCtrl.js"></script>
-    <script src="js/controller/newBookCtrl.js"></script>
-    <script src="js/services/services.js"></script>
-    <script src="js/router/router.js"></script>
+    <script src="js/controller/_CameraCtrl.js"></script>
+    <script src="js/controller/_NewBookCtrl.js"></script>
+    <script src="js/services/BookDataService.js"></script>
+    <script src="js/config/_Router.js"></script>
 
 </head>
-<body ng-app="starter">
+<body ng-app="bookMonkeyMobile">
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
