re-refactor some filenames

--- a/www/index.html
+++ b/www/index.html
@@ -29,10 +29,10 @@
     <script src="js/controller/BookDetailCtrl.js"></script>
     <script src="js/controller/BooksBorrowedCtrl.js"></script>
     <script src="js/controller/BooksOnShelfCtrl.js"></script>
-    <script src="js/controller/_CameraCtrl.js"></script>
-    <script src="js/controller/_NewBookCtrl.js"></script>
+    <script src="js/controller/CameraCtrl.js"></script>
+    <script src="js/controller/NewBookCtrl.js"></script>
     <script src="js/services/BookDataService.js"></script>
-    <script src="js/config/_Router.js"></script>
+    <script src="js/config/Router.js"></script>
 
 </head>
 <body ng-app="bookMonkeyMobile">
