--- a/www/index.html
+++ b/www/index.html
@@ -25,12 +25,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controller/BookListCtrl.js"></script>
-    <script src="js/controller/BookDetailCtrl.js"></script>
-    <script src="js/controller/BooksBorrowedCtrl.js"></script>
-    <script src="js/controller/BooksOnShelfCtrl.js"></script>
-    <script src="js/controller/CameraCtrl.js"></script>
-    <script src="js/controller/NewBookCtrl.js"></script>
+    <script src="js/config/IonicConfig.js"></script>
+    <script src="js/controllers/BookListController.js"></script>
+    <script src="js/controllers/BookDetailController.js"></script>
+    <script src="js/controllers/BooksBorrowedController.js"></script>
+    <script src="js/controllers/BooksOnShelfController.js"></script>
+    <script src="js/controllers/CameraController.js"></script>
+    <script src="js/controllers/NewBookController.js"></script>
     <script src="js/services/BookDataService.js"></script>
     <script src="js/config/Router.js"></script>
 
